<resources>
    <string name="app_name">The Grading Buddy</string>
    <string name="title_classes">Classes</string>
    <string name="title_rubrics">Rubrics</string>
    <string name="add_student">Add Student</string>
    <string name="add_class">Add Class</string>
    <string name="add_rubric">Add Rubric</string>
    <string name="title_activity_new_class">NewClassActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hintClassName">Enter Class Name</string>
    <string name="hintClassNumber">Enter Class Number</string>
    <string name="heading_new_class">New Class</string>
</resources>
