<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.programmingplum.thegradingbuddy.NewClassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_new_class"/>
        <EditText
            android:id="@+id/etClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintClassName"/>

        <EditText
            android:id="@+id/etClassNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintClassNumber"/>
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnNewClassCancel"
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_alignParentLeft="true">
        </Button>
        <Button
            android:id="@+id/btnNewClassSave"
            android:text="@string/save"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_toRightOf="@id/btnNewClassCancel">
            >
        </Button>
    </RelativeLayout>

</RelativeLayout>
